--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+1
+version: 1.0.1+2
 
 environment:
   sdk: ">=2.8.0 <3.0.0"
@@ -42,6 +42,8 @@ dependencies:
   get_version: ^0.2.2
   settings_ui: ^0.4.0
   rate_my_app: any
+  firebase_core: ^0.5.2
+  cloud_firestore: ^0.14.3
   #  flutter_webview_plugin: ^0.3.11
 
 
